# namerena-rs

./: .gitignore  Cargo.toml  news.md  pie.md  readme.md  rustfmt.toml
bench/: tswn.md
maker-py/: .gitignore  camera.py  control.py  main.py  requirements.txt  setup.py  update_log.md
miner/: Cargo.toml
miner/docs/: .gitignore  bench.md  bench2.md  bench3.md  nops.md  updates.md
miner/src/: cacluate.rs  evaluate.rs  main.rs  name.rs  xp_eval.rs
miner/src/evaluate/: xuping.rs
miner/src/evaluate/xuping/: eval.rs  model13.rs  model20.rs
namerena-runner/: Cargo.toml
namerena-runner/src/: engine.rs  main.rs  name.rs  player.rs  rc4.rs
namerena-runner/src/player/: skills.rs
rust-namer/: Cargo.toml
rust-namer/src/: main.rs  runner.rs
src/: cacluate.rs  evaluate.rs  main.rs  name.rs
src/evaluate/: xuping.rs
src/evaluate/xuping/: eval.rs  model20.rs
train/: core_data.toml
wgpu-mine/: Cargo.toml  main.wgsl
wgpu-mine/src/: main.rs  main.wgsl
zigs/: build.zig  build.zig.zon
zigs/src/: main.zig
