[package]
name = "namerena-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
base16384 = "0.1.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
chrono = "0.4.34"

[features]
default = ["simd"]
simd = []

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
lto = true
overflow-checks = false
