[package]
name = "tswn"
description = "tool shenjack work shop namerena"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
base16384 = "0.1.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
chrono = "0.4"
colored = "2.1.0"

# windows 下额外指定一个 windows 依赖 (微软赛高!)
# 用于在 bench 状态下指定核心(就是闲得)

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "*", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = ["simd"]
simd = []
