[package]
name = "rust-namer"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }

thirtyfour = "0.31.0"
clap = "4.5.4"
